--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.7",
+    "nanoid": "^3.1.12",
     "next": "^9.0.2",
     "nookies": "^2.0.8",
     "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hook-form": "^6.6.0",
     "react-stripe-checkout": "^2.6.3",
     "semantic-ui-react": "^0.87.3",
-    "shortid": "^2.2.14",
     "stripe": "^7.5.0",
     "uuid": "^3.3.2",
     "validator": "^11.1.0"
